--- a/nacos-cluster/pom.xml
+++ b/nacos-cluster/pom.xml
@@ -7,11 +7,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.example</groupId>
-    <artifactId>nacos-standalone</artifactId>
+    <artifactId>nacos-cluster</artifactId>
     <packaging>jar</packaging>
 
-    <name>nacos-standalone</name>
+    <name>nacos-cluster</name>
     <url>http://maven.apache.org</url>
 
     <properties>
