--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <url>http://maven.apache.org</url>
   <modules>
     <module>nacos-standalone</module>
+    <module>nacos-cluster</module>
   </modules>
 
   <properties>
